# hri_navigation_layers

./: CMakeLists.txt  README.md  costmap_plugins.xml  package.xml
config/: SimpleLayer.cfg  VirtualLayer.cfg
include/hri_navigation_layers/: simple_layer.h
include/virtual_navigation_layers/: virtual_layer.h
src/: simple_layer.cpp  virtual_layer.cpp
